--- a/Aulas 1 e 2/index.html
+++ b/Aulas 1 e 2/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Banana split</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Banana</h1>
+
+
+
+
+    <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+    </div>
+
+
+
+
+
+    <div class="container">
+    <h1>Banana split</h1>
+    <p>Bom demais</p>
+    <img src="../imagens/banana-slit.jpg" alt="a">
+    </div>
 </body>
 </html>
